--- a/--styles.css
+++ b/--styles.css
@@ -1,46 +1,45 @@
-/* Header Höhe */
+/* Header Höhe 
 header {
-    height: 130px;
+    height: 15%;
 }
 
-/* Header Firmenname links und Logo rechts wenn Schriftkultur rtl */
+/* Header Firmenname links und Logo rechts wenn Schriftkultur rtl 
 [dir="rtl"] header nav#firmenname {
     direction: ltr;
 }
 
-/* Menü */
+/* Menü 
 #menu {
-    top: 120px; 
-    width: 190px;
-    height: calc(100% - 120px);
-    overflow-y: auto;
-    z-index: 900;
-}
+    list-style-position: outside; /* Aufzählpunkte links vom Text 
+}*/
 
-/* Hauptinhalt Abstand zum Menü */
+/* Hauptinhalt Abstand zum Menü 
 main nav#content{
-    margin-left: 130px;
-    padding-top: 70px;
+    padding-left: 0%;
+    padding-top: 9%;
 }
 
-/* Main Tail immer linksbündig wenn Schriftkultur rtl */
-main {
+/* Main Tail immer linksbündig wenn Schriftkultur rtl 
+main nav#content{
     text-align: left;
-}
-
+    direction: left;
+}*/
+/*
 [dir="rtl"] main nav#content {
-    margin-left: -70px;
-    margin-right: 150px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
-/* Aufzählung links ausrichten */
+/* Aufzählung links ausrichten 
 main ul {
-    direction: ltr; /* Schreibrichtung linksbündig */
-    text-align: left; /* Text linksbündig */
-    list-style-position: outside; /* Aufzählpunkte links vom Text */
+    direction: ltr; /* Schreibrichtung linksbündig 
+    text-align: left; /* Text linksbündig 
+    list-style-position: outside; /* Aufzählpunkte links vom Text 
 }
 
-/* Responsive: Menü oben auf kleinen Geräten */
+
+
+/* Responsive: Menü oben auf kleinen Geräten 
 @media (max-width: 768px) {
     #menu {
         width: 100%;
@@ -56,7 +55,7 @@ main ul {
     }
 }
 
-/* Footer */
+/* Footer 
 footer nav#footer {
     margin-left: 130px;
 }
@@ -69,7 +68,7 @@ footer {
     margin-left: -90px;
 }
 
-/* Responsive: Footer auf kleinen Geräten */
+/* Responsive: Footer auf kleinen Geräten 
 @media (max-width: 768px) {
     #footer {
         width: 100%;
